--- a/policy.html
+++ b/policy.html
@@ -85,13 +85,29 @@ Chúng tôi lưu trữ thông tin trong vòng 30 ngày đối với các đơn h
                 </p>
 
                 <p>
-                    4- Cách thức liên lạc<br><br>
-Trong trường hợp cần chỉnh sửa hoặc khiếu nại liên quan thông tin cá nhân khi đặt hàng, vui lòng liên hệ qua số hotline: 0918.099.970, hoặc qua email: admin@hbiang.com.<br>
+                    4- Phương thức và công cụ để người tiêu dùng tiếp cận chỉnh sửa thông tin cá nhân trên hệ thống<br><br>
+Trong trường hợp cần chỉnh sửa thông tin liên quan thông tin cá nhân, thông tin đặt hàng, vui lòng liên hệ qua số hotline: 0918.099.970, hoặc qua email: admin@hbiang.com.<br>
                 </p>
 
                 <p>
                     5- Đơn vị thu thập<br><br>
 H'Biang địa chỉ 14 Trần Quang Diệu - Phường 10 - Đà Lạt - Lâm Đồng.<br>
+Điện thoại: 0918.099.970
+                </p>
+
+                <p>
+                    6- Những đối tượng có thể tiếp cận thông tin<br><br>
+Các đối tượng được tiếp cận thông tin của khách hàng thuộc các trường hợp sau:<br>
+- Nhân viên công ty <br/>
+- Các đối tác bên dịch vụ vận chuyển sản phẩm cho khách hàng<br/>
+                </p>
+
+                <p>
+                    7- Cơ chế tiếp nhận và giải quyết khiếu nại của người tiêu dùng liên quan đến việc thông tin cá nhân bị sử dụng sai mục đích hoặc phạm vi đã thông báo<br><br>
+Thông tin cá nhân của thành viên được cam kết bảo mật. 
+Việc thu thập và sử dụng thông tin cá nhân chỉ được thực hiện khi được sự đồng ý của khách hàng đó trừ những trường hợp pháp luật quy định khác.<br><br>
+Không sử dụng, không chuyển giao, cung cấp hay tiết lộ cho bên thứ 3 nào về thông tin cá nhân của thành viên khi không có sự cho phép đồng ý từ thành viên.<br/><br>
+Trong trường hợp cần khiếu nại, vui lòng liên hệ qua số hotline: 0918.099.970, hoặc qua email: admin@hbiang.com.<br>
                 </p>
        
             </div>
