--- a/index.html
+++ b/index.html
@@ -254,8 +254,9 @@
                                 <div class="form-control-feedback">Vui lòng nhập Lời nhắn</div>
                             </div>
 
-                            <div class="form-notes" style="font-size: 0.9rem; color:#888;margin-bottom: 1rem;">
-                                H'Biang ghi nhận thông tin cá nhân để giao hàng và liên lạc, khi nhấn Gởi đi, quý khách đã đồng ý với các quy định bảo mật thông tin tại đây <a target="_blank" href="/policy.html">Chính sách bảo mật thông tin</a>
+                            <div class="form-notes form-group" style="font-size: 1.0rem; color:#888;">
+                                <input type="checkbox" class="checkbox" name="chkterms"> 
+                                Tôi đã đọc và đồng ý với các quy định bảo mật thông tin tại đây <a target="_blank" href="/policy.html">Chính sách bảo mật thông tin</a>
                             </div>
                         </fieldset>
 
@@ -429,8 +430,8 @@
                 </div>     
             </form>       
         </div>
-        <div class="form-notes" style="font-size: 0.9rem; color:#888;">
-            H'Biang ghi nhận thông tin cá nhân để giao hàng và liên lạc, khi nhấn đặt hàng, quý khách đã đồng ý với các quy định bảo mật thông tin tại đây <a target="_blank" href="/policy.html">Chính sách bảo mật thông tin</a>
+        <div class="form-notes form-group" style="font-size: 1.0rem; color:#888;">
+            <input type="checkbox" class="checkbox"> Tôi đã đọc và đồng ý với các quy định bảo mật thông tin tại đây <a target="_blank" href="/policy.html">Chính sách bảo mật thông tin</a>
         </div>
       </div>
       <div class="modal-footer">
