--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
                                 <label>
                                     <input type="checkbox" class="checkbox" name="chkterms">
 
-                                    Tôi đã đọc và đồng ý với các quy định bảo mật thông tin tại đây &nbsp;<a target="_blank"
-                                        href="/policy.html">Chính sách bảo mật thông tin</a>
+                                    Tôi đã đọc và đồng ý với các quy định bảo mật thông tin tại đây &nbsp;<a
+                                        target="_blank" href="/policy.html">Chính sách bảo mật thông tin</a>
                                 </label>
                             </div>
                         </fieldset>
@@ -340,6 +340,11 @@
                         <span>Giới thiệu</span>
                         <p>H'Biang Cà phê rang xay nguyên chất!</p>
                         <p>Sản phẩm của Đà Lạt, Việt Nam.</p>
+                        <br />
+                        <p>Người chịu trách nhiệm trang web:</p>
+                        <p>Phạm Văn Thiên Ân</p>
+                        <p>Mã số thuế: 0308397735</p>
+                       
                     </li>
                     <li>
                         <span>Chính sách</span>
@@ -356,12 +361,14 @@
                         <p>Hộ Kinh Doanh H'Biang</p>
                         <p>Giấp phép số: 42027437A</p>
                         <p>Cấp ngày: 27/12/2018 tại CA Lâm Đồng</p>
-                        <p>14 Trần Quang Diệu, Phường 10, Đà Lạt, Lâm Đồng <br /><br /></p>
-                        <p>Người chịu trách nhiệm trang web:</p>
-                        <p>Phạm Văn Thiên Ân</p>
-                        <p>Mã số thuế: 0308397735</p>
+                        <p>14 Trần Quang Diệu, Phường 10, Đà Lạt, Lâm Đồng </p>
                         <p>Hotline: 0918.099.970</p>
-                        <p>Email: sales@hbiang.com</p>
+                        <p>Email: sales@hbiang.com <br /><br /></p>
+                        <p>
+                            <a target="_blank" href="http://online.gov.vn/Home/WebDetails/85796"><img alt=""
+                                    style="width: 220px;" title=""
+                                    src="http://online.gov.vn/Content/EndUser/LogoCCDVSaleNoti/logoSaleNoti.png" /></a>
+                        </p>
                     </li>
                 </ul>
             </div>
@@ -484,9 +491,10 @@
                     </div>
                     <div class="form-notes form-group" style="font-size: 1.0rem; color:#888;">
                         <label>
-                        <input type="checkbox" class="checkbox"> Tôi đã đọc và đồng ý với các quy định bảo mật thông tin
-                        tại đây &nbsp;<a target="_blank" href="/policy.html">Chính sách bảo mật thông tin</a>
-                    </label>
+                            <input type="checkbox" class="checkbox"> Tôi đã đọc và đồng ý với các quy định bảo mật thông
+                            tin
+                            tại đây &nbsp;<a target="_blank" href="/policy.html">Chính sách bảo mật thông tin</a>
+                        </label>
                     </div>
                 </div>
                 <div class="modal-footer">
