--- a/terms.html
+++ b/terms.html
@@ -91,6 +91,11 @@ H'Biang đảm bảo sản phẩm được bán tại web là sản phẩm mới
                         <span>Giới thiệu</span>
                         <p>H'Biang Cà phê rang xay nguyên chất!</p>
                         <p>Sản phẩm của Đà Lạt, Việt Nam.</p>
+                        <br />
+                        <p>Người chịu trách nhiệm trang web:</p>
+                        <p>Phạm Văn Thiên Ân</p>
+                        <p>Mã số thuế: 0308397735</p>
+                       
                     </li>
                     <li>
                         <span>Chính sách</span>
@@ -103,16 +108,18 @@ H'Biang đảm bảo sản phẩm được bán tại web là sản phẩm mới
                         </ul>
                     </li>
                     <li class="footer-column-last">
-                        <span>Thông tin</span> 
+                        <span>Thông tin</span>
                         <p>Hộ Kinh Doanh H'Biang</p>
                         <p>Giấp phép số: 42027437A</p>
                         <p>Cấp ngày: 27/12/2018 tại CA Lâm Đồng</p>
-                        <p>14 Trần Quang Diệu, Phường 10, Đà Lạt, Lâm Đồng <br/><br/></p>
-                        <p>Người chịu trách nhiệm trang web:</p>
-                        <p>Phạm Văn Thiên Ân</p>
-                        <p>Mã số thuế: 0308397735</p>
+                        <p>14 Trần Quang Diệu, Phường 10, Đà Lạt, Lâm Đồng </p>
                         <p>Hotline: 0918.099.970</p>
-                        <p>Email: sales@hbiang.com</p>
+                        <p>Email: sales@hbiang.com <br /><br /></p>
+                        <p>
+                            <a target="_blank" href="http://online.gov.vn/Home/WebDetails/85796"><img alt=""
+                                    style="width: 220px;" title=""
+                                    src="http://online.gov.vn/Content/EndUser/LogoCCDVSaleNoti/logoSaleNoti.png" /></a>
+                        </p>
                     </li>
                 </ul>
             </div>
