--- a/index.html
+++ b/index.html
@@ -702,9 +702,9 @@
         }
 
         function submitContactForm() {
-            if (!confirm('Bạn đã kiểm tra kỹ thông tin trước khi Góp ý?')) {
-                return;
-            }
+            // if (!confirm('Bạn đã kiểm tra kỹ thông tin trước khi Góp ý?')) {
+            //     return;
+            // }
             $.ajaxSetup({
                 crossDomain: true,
                 xhrFields: {
@@ -723,9 +723,9 @@
         }
 
         function submitOrderForm() {
-            if (!confirm('Bạn đã kiểm tra kỹ thông tin trước khi Đặt hàng?')) {
-                return;
-            }
+            // if (!confirm('Bạn đã kiểm tra kỹ thông tin trước khi Đặt hàng?')) {
+            //     return;
+            // }
             $.ajaxSetup({
                 crossDomain: true,
                 xhrFields: {
