--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
                             <tr>
                                 <th class="fit hidden-xs-down">#</th>
                                 <th class="" style="white-space: nowrap">Sản phẩm</th>
+                                <th class="fit text-xs-center">Loại</th>
                                 <th class="fit text-xs-center">Số lượng</th>
                                 <th class="fit text-xs-right">Thành tiền</th>
                                 <th class="fit text-xs-right"></th>
@@ -462,6 +463,10 @@
                             <input type="hidden" name="product1_qty" id="product1_qty" />
                             <input type="hidden" name="product2_qty" id="product2_qty" />
                             <input type="hidden" name="product3_qty" id="product3_qty" />
+
+                            <input type="hidden" name="product1_type" id="product1_type" />
+                            <input type="hidden" name="product2_type" id="product2_type" />
+                            <input type="hidden" name="product3_type" id="product3_type" />
 
                             <div class="form-group">
                                 <label for="exampleTextarea">TÊN KHÁCH HÀNG</label>
@@ -513,14 +518,23 @@
     <script>
 
         var products = [
-            { name: 'H\'Biang *', id: 1, price: 100000, qty: 0 },
-            { name: 'H\'Biang **', id: 2, price: 150000, qty: 0 },
-            { name: 'H\'Biang ***', id: 3, price: 200000, qty: 0 },
+            { name: 'H\'Biang *', id: 1, price: 100000, qty: 0, type: 1 },
+            { name: 'H\'Biang **', id: 2, price: 150000, qty: 0, type: 1 },
+            { name: 'H\'Biang ***', id: 3, price: 200000, qty: 0, type: 1 },
         ];
 
         function updateProductQty(id, qty) {
-            if (id > 0 && id <= 3)
+            if (id > 0 && id <= 3) {
                 products[id - 1].qty = qty;
+            }   
+        }
+
+        function updateProductType(id, type) {
+            if (id > 0 && id <= 3) {
+                products[id - 1].type = type;
+            }
+
+            //console.log(products);
         }
 
         function calcTotal() {
@@ -535,8 +549,11 @@
 
         function removeProduct(id) {
             for (var i = 0; i < products.length; i++) {
-                if (products[i].id == id)
+                if (products[i].id == id) {
                     products[i].qty = 0;
+                    products[i].type = 1;
+                }
+                    
             }
 
             renderShoppingCart();
@@ -545,8 +562,11 @@
         function addProduct(id) {
             for (var i = 0; i < products.length; i++) {
                 if (products[i].id == id) {
-                    if (products[i].qty < 1)
+                    if (products[i].qty < 1) {
                         products[i].qty = 1;
+                        products[i].type = 1;
+                    }
+                        
                 }
             }
 
@@ -556,6 +576,15 @@
         // format currency to VNĐ
         function formatCurrency(num) {
             return num.toString().replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1.") + 'đ';
+        }
+
+        function renderProductType(type) {
+            var str = '<select class="product-type select form-control text-xs-center" style="width:40px">';
+            str += '<option value="1" ' + (type == 1 ? 'selected' : '') + '> Bột </option>';
+            str += '<option value="2" ' + (type == 2 ? 'selected' : '') + '> Hạt </option>';
+            str += '</select>';
+
+            return str;
         }
 
         function renderShoppingCart() {
@@ -570,6 +599,9 @@
                 if (product.qty > 0) {
                     itemHtml = '<tr productid="' + product.id + '"><th class="hidden-xs-down" scope="row">' + index + '</th>'
                         + '<td>' + product.name + '</td>'
+                        + '<td class="text-xs-center">'
+                        + renderProductType(product.type)
+                        + '</td>'
                         + '<td class="text-xs-center">'
                         + '<input class="form-control text-xs-center product-qty" min="1" max="9999" type="number" value="' + product.qty + '" id="example-number-input">'
                         + '</td>'
@@ -589,7 +621,7 @@
             if (htmlString != '') {
                 htmlString += ' <tr>'
                 htmlString += '<th class="hidden-xs-down" scope="row"></th>'
-                htmlString += '<td colspan="2" class="text-xs-right">'
+                htmlString += '<td colspan="3" class="text-xs-right">'
                 htmlString += 'Tổng cộng'
                 htmlString += '</td>'
                 htmlString += '<td class="text-xs-right" style="font-size: 1.2rem"><strong>' + formatCurrency(calcTotal()) + '</strong></td>'
@@ -626,6 +658,20 @@
 
                 if (products[productid - 1].qty != qty) {
                     updateProductQty(productid, qty);
+
+                    renderShoppingCart();
+                }
+            });
+
+            $('#cart-products .product-type').change(function () {
+                var ele = $(this);
+                var type = ele.val();
+
+                var row = ele.closest('tr');
+                var productid = row.attr('productid');
+
+                if (products[productid - 1].type != type) {
+                    updateProductType(productid, type);
 
                     renderShoppingCart();
                 }
@@ -734,6 +780,9 @@
             for (var i = 0; i < products.length; i++) {
                 var id = '#product' + (i * 1 + 1) + '_qty';
                 $(id).val(products[i].qty);
+
+                var typeId = '#product' + (i * 1 + 1) + '_type';
+                $(typeId).val(products[i].type);
             }
 
             $.post('https://w.hbiang.com/order.php',
@@ -793,7 +842,7 @@
                 addProduct(id);
                 renderShoppingCart();
 
-                console.log(products);
+                //console.log(products);
 
                 $('#myModal').modal();
             });
