change product images

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
             <div class="card-deck" style="margin-top:20px;">
                 <div class="card" style="background-color:#fcfcfc;border:none">
-                    <img class="card-img-top img-fluid" src="/v2/res/images/product-1star.jpg"
+                    <img class="card-img-top img-fluid" src="/v2/res/images/p1star.jpg"
                         style="width:100%;margin-top:1rem;" alt="Card image cap">
                     <div class="card-block">
                         <h4 class="card-title text-xs-center">H'BIANG</h4>
@@ -131,7 +131,7 @@
                 </div>
 
                 <div class="card" style="background-color:#fcfcfc;border:none">
-                    <img class="card-img-top img-fluid" src="/v2/res/images/product-2stars.jpg"
+                    <img class="card-img-top img-fluid" src="/v2/res/images/p2stars.jpg"
                         style="width:100%;margin-top:1rem;" alt="Card image cap">
                     <div class="card-block">
                         <h4 class="card-title text-xs-center">H'BIANG</h4>
@@ -154,7 +154,7 @@
                 </div>
 
                 <div class="card" style="background-color:#fcfcfc;border:none">
-                    <img class="card-img-top img-fluid" src="/v2/res/images/product-3stars.jpg"
+                    <img class="card-img-top img-fluid" src="/v2/res/images/p3stars.jpg"
                         style="width:100%;margin-top:1rem;" alt="Card image cap">
                     <div class="card-block">
                         <h4 class="card-title text-xs-center">H'BIANG</h4>
